@@ -1110,8 +1110,11 @@ public class IndexWriter implements Closeable {
     }
 
     writeLock = directory.makeLock(WRITE_LOCK_NAME);
+
     if (!writeLock.obtain(writeLockTimeout)) // obtain write lock
       throw new LockObtainFailedException("Index locked for write: " + writeLock);
+
+    boolean success = false;
 
     try {
       if (create) {
@@ -1179,10 +1182,20 @@ public class IndexWriter implements Closeable {
         messageState();
       }
 
-    } catch (IOException e) {
-      writeLock.release();
-      writeLock = null;
-      throw e;
+      success = true;
+
+    } finally {
+      if (!success) {
+        if (infoStream != null) {
+          message("init: hit exception on init; releasing write lock");
+        }
+        try {
+          writeLock.release();
+        } catch (Throwable t) {
+          // don't mask the original exception
+        }
+        writeLock = null;
+      }
     }
   }
   
